--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,15 @@
 {
   "extends": [
-    "airbnb",
+    "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "airbnb-typescript",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "next/core-web-vitals",
     "prettier"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
-  }
+  },
+  "plugins": ["@typescript-eslint"],
+  "root": true
 }
